# ROCm-OpenCL-Driver

./: CMakeLists.txt  License  README.md
src/driver/: AmdCompiler.cpp  AmdCompiler.h  CMakeLists.txt  Driver.cpp  Driver.h
src/roc-cl/: CMakeLists.txt  roc-cl.cpp
src/sample/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  defined.cl  extern_function1.cl  extern_function2.cl  includer.cl  simple.cl
src/unittest/: CMakeLists.txt  Tests.cpp
